syntax = "proto3";

package video_collection;

option go_package = "video_collection/v1;video_collection";
option java_multiple_files = true;
option java_package = "repo.video_collection.v1";
option java_outer_classname = "VideoCollectionV1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "tagger/tagger.proto";
import "goguru/annotations/annotations.proto";

service VideoCollection {
  rpc Count (VideoCollectionCountReq) returns (VideoCollectionCountRes){
    option (google.api.http) = {
      post: "/v1/video-collection/count",
      body: "*",
    };
    option (goguru.annotations.cache) = {
      cachable: false,
      name: "VideoCollection",
      ttl: "30s",
      key: "",
    };
  }
  rpc One (VideoCollectionOneReq) returns (VideoCollectionOneRes){
    option (google.api.http) = {
      post: "/v1/video-collection/one",
      body: "*",
    };
    option (goguru.annotations.cache) = {
      cachable: false,
      name: "VideoCollection",
      ttl: "30s",
      key: "",
    };
  }
  rpc List (VideoCollectionListReq) returns (VideoCollectionListRes){
    option (google.api.http) = {
      post: "/v1/video-collection/list",
      body: "*",
    };
    option (goguru.annotations.cache) = {
      cachable: false,
      name: "VideoCollection",
      ttl: "30s",
      key: "",
    };
  }
  rpc Get (VideoCollectionGetReq) returns (VideoCollectionGetRes){
    option (google.api.http) = {
      get: "/v1/video-collection/{id}",
    };
    option (goguru.annotations.cache) = {
      cachable: false,
    };
  }
  rpc Create (VideoCollectionCreateReq) returns (VideoCollectionCreateRes){
    option (google.api.http) = {
      post: "/v1/video-collection",
      body: "*",
    };
    option (goguru.annotations.cache) = {
      cachable: false,
    };
  }
  rpc Update (VideoCollectionUpdateReq) returns (VideoCollectionUpdateRes){
    option (google.api.http) = {
      patch: "/v1/video-collection/{id}",
      body: "*",
    };
    option (goguru.annotations.cache) = {
      cachable: false,
    };
  }
  rpc Upsert (VideoCollectionUpsertReq) returns (VideoCollectionUpsertRes){
    option (google.api.http) = {
      put: "/v1/video-collection/{id}",
      body: "*",
    };
    option (goguru.annotations.cache) = {
      cachable: false,
    };
  }
  rpc Delete (VideoCollectionDeleteReq) returns (VideoCollectionDeleteRes){
    option (google.api.http) = {
      delete: "/v1/video-collection/{id}",
    };
    option (goguru.annotations.cache) = {
      cachable: false,
    };
  }
  rpc DeleteMulti (VideoCollectionDeleteMultiReq) returns (VideoCollectionDeleteMultiRes){
    option (google.api.http) = {
      post: "/v1/video-collection/delete",
      body: "*",
    };
    option (goguru.annotations.cache) = {
      cachable: false,
    };
  }
}

message VideoCollectionCountReq {
  google.protobuf.Any  id = 1;
  google.protobuf.Any  name = 2;
  google.protobuf.Any  contentType = 3;
  google.protobuf.Any  filterType = 4;
  google.protobuf.Any  count = 5;
  google.protobuf.Any  isOnline = 6;
  google.protobuf.Any  createdAt = 7;
  google.protobuf.Any  updatedAt = 8;
}

message VideoCollectionCountRes {
  optional int64 total = 1 [(tagger.tags) = "json:\"total\""];
}

message VideoCollectionOneReq {
  google.protobuf.Any  id = 1;
  google.protobuf.Any  name = 2;
  google.protobuf.Any  contentType = 3;
  google.protobuf.Any  filterType = 4;
  google.protobuf.Any  count = 5;
  google.protobuf.Any  isOnline = 6;
  google.protobuf.Any  createdAt = 7;
  google.protobuf.Any  updatedAt = 8;
  string orderBy = 9;
}

message VideoCollectionOneRes {
  bool found = 1;
  optional VideoCollectionItem item = 2;
}

message VideoCollectionListReq {
  google.protobuf.Any  id = 1;
  google.protobuf.Any  name = 2;
  google.protobuf.Any  contentType = 3;
  google.protobuf.Any  filterType = 4;
  google.protobuf.Any  count = 5;
  google.protobuf.Any  isOnline = 6;
  google.protobuf.Any  createdAt = 7;
  google.protobuf.Any  updatedAt = 8;
  int64 page = 9 [(tagger.tags) = "d:\"1\""];
  int64 pageSize = 10 [(tagger.tags) = "d:\"10\""];
  string orderBy = 11;
}

message VideoCollectionListRes {
  int64 total = 1 [(tagger.tags) = "json:\"total\""];
  int64 current = 2 [(tagger.tags) = "json:\"current\""];
  repeated VideoCollectionItem items = 3 [(tagger.tags) = "json:\"items\""];
}

message VideoCollectionItem {
  optional string id = 1 [(tagger.tags) = "bson:\"_id\" json:\"id\""];
  optional string name = 2 [(tagger.tags) = "bson:\"name\" json:\"name\""];
  optional int32 contentType = 3 [(tagger.tags) = "bson:\"contentType\" json:\"contentType\""];
  optional int32 filterType = 4 [(tagger.tags) = "bson:\"filterType\" json:\"filterType\""];
  optional uint32 count = 5 [(tagger.tags) = "bson:\"count\" json:\"count\""];
  optional bool isOnline = 6 [(tagger.tags) = "bson:\"isOnline\" json:\"isOnline\""];
  optional google.protobuf.Timestamp createdAt = 7 [(tagger.tags) = "bson:\"createdAt\" json:\"createdAt\""];
  optional google.protobuf.Timestamp updatedAt = 8 [(tagger.tags) = "bson:\"updatedAt\" json:\"updatedAt\""];
}

message VideoCollectionGetReq {
  string id = 1 [(tagger.tags) = "p:\"id\" v:\"required#视频集ID，字符串格式不能为空\" json:\"id\" bson:\"_id,omitempty\""];
}

message VideoCollectionGetRes {
  optional string id = 1 [(tagger.tags) = "bson:\"_id\" json:\"id\""];
  optional string name = 2 [(tagger.tags) = "bson:\"name\" json:\"name\""];
  optional int32 contentType = 3 [(tagger.tags) = "bson:\"contentType\" json:\"contentType\""];
  optional int32 filterType = 4 [(tagger.tags) = "bson:\"filterType\" json:\"filterType\""];
  optional uint32 count = 5 [(tagger.tags) = "bson:\"count\" json:\"count\""];
  optional bool isOnline = 6 [(tagger.tags) = "bson:\"isOnline\" json:\"isOnline\""];
  optional google.protobuf.Timestamp createdAt = 7 [(tagger.tags) = "bson:\"createdAt\" json:\"createdAt\""];
  optional google.protobuf.Timestamp updatedAt = 8 [(tagger.tags) = "bson:\"updatedAt\" json:\"updatedAt\""];
}

message VideoCollectionCreateReq {
  optional string id = 1 [(tagger.tags) = "p:\"id\" v:\"required#视频集ID，字符串格式不能为空\" json:\"id\" bson:\"_id,omitempty\""];
  optional string name = 2 [(tagger.tags) = "p:\"name\" v:\"required|max-length:50#视频集名称不能为空|视频集名称不能超过50个字\" json:\"name\" bson:\"name,omitempty\""];
  optional int32 contentType = 3 [(tagger.tags) = "p:\"contentType\" v:\"required#内容类型不能为空\" json:\"contentType\" bson:\"contentType,omitempty\""];
  optional int32 filterType = 4 [(tagger.tags) = "p:\"filterType\" json:\"filterType\" bson:\"filterType,omitempty\""];
  optional uint32 count = 5 [(tagger.tags) = "p:\"count\" json:\"count\" bson:\"count,omitempty\""];
  optional bool isOnline = 6 [(tagger.tags) = "p:\"isOnline\" json:\"isOnline\" bson:\"isOnline,omitempty\""];
  optional google.protobuf.Timestamp createdAt = 7 [(tagger.tags) = "p:\"createdAt\" json:\"createdAt\" bson:\"createdAt,omitempty\""];
  optional google.protobuf.Timestamp updatedAt = 8 [(tagger.tags) = "p:\"updatedAt\" json:\"updatedAt\" bson:\"updatedAt,omitempty\""];
}

message VideoCollectionCreateRes {
  optional string message = 1 [(tagger.tags) = "json:\"message\""];
  optional string insertedId = 2 [(tagger.tags) = "json:\"insertedId\""];
  optional int64 rowsAffected = 3 [(tagger.tags) = "json:\"rowsAffected\""];
}

message VideoCollectionUpdateReq {
  string id = 1 [(tagger.tags) = "p:\"id\" v:\"required#视频集ID，字符串格式不能为空\" json:\"id\" bson:\"_id,omitempty\""];
  optional string name = 2 [(tagger.tags) = "p:\"name\" json:\"name\" bson:\"name,omitempty\""];
  optional int32 contentType = 3 [(tagger.tags) = "p:\"contentType\" json:\"contentType\" bson:\"contentType,omitempty\""];
  optional int32 filterType = 4 [(tagger.tags) = "p:\"filterType\" json:\"filterType\" bson:\"filterType,omitempty\""];
  optional uint32 count = 5 [(tagger.tags) = "p:\"count\" json:\"count\" bson:\"count,omitempty\""];
  optional bool isOnline = 6 [(tagger.tags) = "p:\"isOnline\" json:\"isOnline\" bson:\"isOnline,omitempty\""];
  optional google.protobuf.Timestamp createdAt = 7 [(tagger.tags) = "p:\"createdAt\" json:\"createdAt\" bson:\"createdAt,omitempty\""];
  optional google.protobuf.Timestamp updatedAt = 8 [(tagger.tags) = "p:\"updatedAt\" json:\"updatedAt\" bson:\"updatedAt,omitempty\""];
}

message VideoCollectionUpdateRes {
  optional string message = 1 [(tagger.tags) = "json:\"message\""];
  optional int64 rowsAffected = 2 [(tagger.tags) = "json:\"rowsAffected\""];
}

message VideoCollectionUpsertReq {
  string id = 1 [(tagger.tags) = "p:\"id\" v:\"required#视频集ID，字符串格式不能为空\" json:\"id\" bson:\"_id,omitempty\""];
  optional string name = 2 [(tagger.tags) = "p:\"name\" json:\"name\" bson:\"name,omitempty\""];
  optional int32 contentType = 3 [(tagger.tags) = "p:\"contentType\" json:\"contentType\" bson:\"contentType,omitempty\""];
  optional int32 filterType = 4 [(tagger.tags) = "p:\"filterType\" json:\"filterType\" bson:\"filterType,omitempty\""];
  optional uint32 count = 5 [(tagger.tags) = "p:\"count\" json:\"count\" bson:\"count,omitempty\""];
  optional bool isOnline = 6 [(tagger.tags) = "p:\"isOnline\" json:\"isOnline\" bson:\"isOnline,omitempty\""];
  optional google.protobuf.Timestamp createdAt = 7 [(tagger.tags) = "p:\"createdAt\" json:\"createdAt\" bson:\"createdAt,omitempty\""];
  optional google.protobuf.Timestamp updatedAt = 8 [(tagger.tags) = "p:\"updatedAt\" json:\"updatedAt\" bson:\"updatedAt,omitempty\""];
}

message VideoCollectionUpsertRes {
  optional string message = 1 [(tagger.tags) = "json:\"message\""];
  optional string insertedId = 2 [(tagger.tags) = "json:\"insertedId\""];
  optional int64 rowsAffected = 3 [(tagger.tags) = "json:\"rowsAffected\""];
}

message VideoCollectionDeleteReq {
  string id = 1 [(tagger.tags) = "p:\"id\" v:\"required#视频集ID，字符串格式不能为空\" json:\"id\" bson:\"_id,omitempty\""];
}

message VideoCollectionDeleteRes {
  optional string message = 1 [(tagger.tags) = "json:\"message\""];
  optional int64 insertedId = 2 [(tagger.tags) = "json:\"insertedId\""];
  optional int64 rowsAffected = 3 [(tagger.tags) = "json:\"rowsAffected\""];
}

message VideoCollectionDeleteMultiReq {
  google.protobuf.Any  id = 1;
  google.protobuf.Any  name = 2;
  google.protobuf.Any  contentType = 3;
  google.protobuf.Any  filterType = 4;
  google.protobuf.Any  count = 5;
  google.protobuf.Any  isOnline = 6;
  google.protobuf.Any  createdAt = 7;
  google.protobuf.Any  updatedAt = 8;
}

message VideoCollectionDeleteMultiRes {
  optional string message = 1 [(tagger.tags) = "json:\"message\""];
  optional int64 insertedId = 2 [(tagger.tags) = "json:\"insertedId\""];
  optional int64 rowsAffected = 3 [(tagger.tags) = "json:\"rowsAffected\""];
}